--- a/src/main/resources/templates/usuarios/Inscribirse.html
+++ b/src/main/resources/templates/usuarios/Inscribirse.html
@@ -102,12 +102,12 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="contrasenia" class="col-sm-2 control-label">Contraseña:</label>
+                    <label for="contrasenia" class="col-sm-2 control-label">contrasenia:</label>
                     <div class="col-sm-10">
-                        <input type="password" id="contrasenia" th:field="${nuevoUsuario.contraseña}"
+                        <input type="password" id="contrasenia" th:field="${nuevoUsuario.contrasenia}"
                             class="form-control" />
-                        <span th:if="${#fields.hasErrors('nuevoUsuario.contraseña')}"
-                            th:errors="${nuevoUsuario.contraseña}" class="error-message"></span>
+                        <span th:if="${#fields.hasErrors('nuevoUsuario.contrasenia')}"
+                            th:errors="${nuevoUsuario.contrasenia}" class="error-message"></span>
                     </div>
                 </div>
 
