--- a/src/main/resources/templates/usuarios/login.html
+++ b/src/main/resources/templates/usuarios/login.html
@@ -44,8 +44,8 @@
                     <input type="text" id="username" name="username" placeholder="Ingrese su nombre de usuario" required="required" autofocus="autofocus"/>
                 </div>
                 <div class="form-group">
-                    <label for="password">Contraseña:</label>
-                    <input type="password" id="password" name="password" placeholder="Ingrese su contraseña" required="required"/>
+                    <label for="password">contrasenia:</label>
+                    <input type="password" id="password" name="password" placeholder="Ingrese su contrasenia" required="required"/>
                 </div>
                 <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
             </form>
