implementando filtros para usuarios
implementando filtros para usuarios

--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Página no encontrada</title>
+    <title>Páginaaaaaa no encontrada</title>
 </head>
 <body>
     <h1>¡Oops! Parece que la página que buscabas no existe.</h1>
