--- a/src/main/resources/templates/tickets/VerTicket.html
+++ b/src/main/resources/templates/tickets/VerTicket.html
@@ -126,9 +126,13 @@
 <div class="container">
     <div class="top-bar">
         <h1>Detalle del Ticket</h1>
-        <div>
-            <span th:text="${'Bienvenido, ' + #authentication.principal.username}">Bienvenido, usuario_demo</span>
-            <form th:action="@{/logout}" method="post" style="display: inline;">
+        <div class="user-actions"> <span th:text="${'Bienvenido, ' + #authentication.principal.username}"
+                style="margin-right: 15px; vertical-align: middle;">Bienvenido, usuario_demo</span>
+
+            <a th:href="@{/}" class="btn btn-menu-principal" style="margin-right: 10px; vertical-align: middle;">Volver
+                al Menú Principal</a>
+
+            <form th:action="@{/logout}" method="post" style="display: inline-block; vertical-align: middle;">
                 <button type="submit" class="logout-button">Salir</button>
             </form>
         </div>
