--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -340,7 +340,7 @@
 							<td th:text="${ticket.fechaCreacion != null ? ticket.fechaCreacion : ''}">Fecha de Creación
 							</td>
 							<td>
-								<form th:action="@{/tickets/resolver/{id}(id=${ticket.idTicket})}" method="get">
+								<form th:action="@{/tickets/VerTicket/{id}(id=${ticket.idTicket})}" method="get">
 									<button type="submit" class="action-button dar-alta-button">Intervenir</button>
 								</form>
 							</td>
