--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -224,8 +224,10 @@
 			</div>
 
 			<div class="dashboard-menu">
-				<a th:href="@{/usuarios/admin/crear}" class="menu-button">Agregar Usuario</a>
-			</div>
+				<a th:href="@{/}" class="menu-button">Usuarios</a>
+                <a th:href="@{/usuarios/admin/crear}" class="menu-button">Agregar Usuario</a>
+                <a th:href="@{/tickets/admin}" class="menu-button">Tickets</a> </div>
+		
 
 			<div class="dashboard-content">
                 <h2>Listado de Usuarios</h2>
