modificaciones  en vistas
modificaciones  en vistas

--- a/src/main/resources/templates/admin/panel-tickets.html
+++ b/src/main/resources/templates/admin/panel-tickets.html
@@ -135,7 +135,7 @@
                 
                 <div class="filter-row">
                     <div class="filter-group">
-                        <form th:action="@{/admin/tickets/buscar/titulo}" method="get">
+                        <form th:action="@{/tickets/buscar/titulo}" method="get">
                             <label for="searchTitulo">Título:</label>
                             <input type="text" id="searchTitulo" name="valor" class="search-input" placeholder="Parte del título...">
                             <button type="submit" class="action-button">Buscar</button>
