Vista MisTickets.html + cambios y ajustes
Agrego la vista y cambios

Co-Authored-By: Franco Sebastian Romay <102883115+FranSeba@users.noreply.github.com>

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -123,7 +123,7 @@
 			<div class="dashboard-menu">
 				<a th:href="@{/}" class="menu-button">Resumen</a>
 				<a th:href="@{/tickets/crear}" class="menu-button">Crear Ticket</a>
-				<a th:href="@{/tickets/crear}" class="menu-button">Mis Tickets</a>
+				<a th:href="@{/tickets/mis-tickets}" class="menu-button">Mis Tickets</a>
 			</div>
 
 			<div class="dashboard-content" th:if="${tickets != null}">
