--- a/src/main/resources/templates/tickets/mis-tickets.html
+++ b/src/main/resources/templates/tickets/mis-tickets.html
@@ -177,11 +177,11 @@
             </div>
 
             <div style="flex: 1 1 200px;">
-                <label for="fechaCreacionHasta">Fecha de Creación (Hasta):</label>
+                <label for="fechaCreacionHasta">Fecha de Creación:</label>
                 <input type="date" id="fechaCreacionHasta" name="fechaCreacionHasta" class="search-input"
                     style="width: 100%; padding: 8px;">
             </div>
-
+			
             <div style="flex: 1 1 200px;">
                 <label for="fechaCierreDesde">Fecha de Cierre (Desde):</label>
                 <input type="date" id="fechaCierreDesde" name="fechaCierreDesde" class="search-input"
